--- a/index.html
+++ b/index.html
@@ -159,7 +159,27 @@
                 <p class="ready__subtitle">Независимо от того, являетесь ли вы разработчиком, мерчантом, конечным пользователем или покупателем окон, мы приветствуем вас в сообществе BTCA.</p>
             </div>
             <div class="ready__body">
-                <div class="ready__item"></div>
+                <div class="ready__item">
+                    <div class="ready__col">
+                        <p class="ready__step">1 шаг</p>
+                        <h3 class="ready__col-title">Скачайте <br> приложение</h3>
+                        <a href="#" class="btn ready__btn">Перейти</a>
+                    </div>
+                </div>
+                <div class="ready__item ready__item_reg">
+                    <div class="ready__col">
+                        <p class="ready__step">2 шаг</p>
+                        <h3 class="ready__col-title">Регестрируйтесь</h3>
+                        <a href="#" class="btn ready__btn">Перейти</a>
+                    </div>
+                </div>
+                <div class="ready__item ready__item_use">
+                    <div class="ready__col">
+                        <p class="ready__step">3 шаг</p>
+                        <h3 class="ready__col-title">Пользуйтесь</h3>
+                        <a href="#" class="btn ready__btn">Перейти</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
