add new section

--- a/index.html
+++ b/index.html
@@ -181,6 +181,16 @@
                     </div>
                 </div>
             </div>
+            <div class="never">
+                <h2 class="never__title">Никогда не пропускайте обновления</h2>
+                <p class="never__subtitle">Подпишитесь на информационный бюллетень и будьте первым, кто получит новейшие оповещения, объявления и обновления о разработках BTCA.</p>
+                <form action="#">
+                    <div class="never__form">
+                        <input type="search" class="never__search" placeholder="Ваш e-mail">
+                        <input type="submit" class="never__btn ready__btn" value="Подписаться">
+                    </div>
+                </form>
+            </div>
         </div>
     </section>
 
