--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
                 <p class="ready__subtitle">Независимо от того, являетесь ли вы разработчиком, мерчантом, конечным пользователем или покупателем окон, мы приветствуем вас в сообществе BTCA.</p>
             </div>
             <div class="ready__body">
-                <div class="ready__item">
+                <div data-wow-delay="1s" class="ready__item animate__animated animate__fadeInLeft wow">
                     <div class="ready__col">
                         <p class="ready__step">1 шаг</p>
                         <h3 class="ready__col-title">Скачайте <br> приложение</h3>
                         <a href="#" class="btn ready__btn">Перейти</a>
                     </div>
                 </div>
-                <div class="ready__item ready__item_reg">
+                <div data-wow-delay="2s" class="ready__item ready__item_reg animate__animated animate__fadeInLeft wow">
                     <div class="ready__col">
                         <p class="ready__step">2 шаг</p>
                         <h3 class="ready__col-title">Регестрируйтесь</h3>
                         <a href="#" class="btn ready__btn">Перейти</a>
                     </div>
                 </div>
-                <div class="ready__item ready__item_use">
+                <div data-wow-delay="3s" class="ready__item ready__item_use animate__animated animate__fadeInLeft wow">
                     <div class="ready__col">
                         <p class="ready__step">3 шаг</p>
                         <h3 class="ready__col-title">Пользуйтесь</h3>
