--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
     </header>
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="container">
             <div class="hero__row">
                 <div class="about">
@@ -116,7 +116,7 @@
     </section>
     <section class="partners">
         <p class="partners__main-title animate__animated animate__fadeInLeft wow">ПАРТНЕРЫ</p>
-        <div class="conatiner">
+        <div class="container">
             <div class="partners__body">
                 <div class="partners__about">
                     <h2 class="partners__title">Нас поддерживают</h2>
