--- a/index.html
+++ b/index.html
@@ -193,6 +193,72 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__body">
+                <div class="footer__rovac">
+                    <h2 class="footer__point">rovac</h2>
+                    <div class="footer__icons wallet__icons">
+                        <img src="img/android-icon.svg" alt="android-icon" class="footer__icon wallet__icon">
+                        <img src="img/apple-icon.svg" alt="apple-icon" class="footer__icon wallet__icon">
+                        <img src="img/lin-icon.svg" alt="linux-icon" class="footer__icon wallet__icon">
+                        <img src="img/win-icon.svg" alt="windows__icon" class="footer__icon wallet__icon">
+                    </div>
+                    <h3 class="footer__title">Никогда не пропускайте обновления</h3>
+                    <form action="#">
+                        <div class="footer__form never__form">
+                            <input type="search" class="footer__search never__search" placeholder="Ваш e-mail">
+                            <input type="submit" class="footer__btn never__btn ready__btn" value="Подписаться">
+                        </div>
+                    </form>
+                    <p class="footer__subtitle">BTCA - это децентрализованная, одноранговая валюта с открытым исходным кодом, отличающаяся расширенными функциями конфиденциальности</p>
+                </div>
+                <div class="footer__points">
+                    <div class="footer__body">
+                        <div class="footer__item">
+                            <h2 class="footer__pont footer__point">BTCA</h2>
+                            <ul class="footer__list">
+                                <li><a href="#" class="footer__link">Получить PIV</a></li>
+                                <li><a href="#" class="footer__link">Конфиденциальность</a></li>
+                                <li><a href="#" class="footer__link">Продвинутый PoS</a></li>
+                                <li><a href="#" class="footer__link">Холодный Стекинг</a></li>
+                                <li><a href="#" class="footer__link">Мастерноды</a></li>
+                                <li><a href="#" class="footer__link">Управление</a></li>
+                                <li><a href="#" class="footer__link">Экономика</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer__item">
+                            <h2 class="footer__pont footer__point">Ресурсы</h2>
+                            <ul class="footer__list">
+                                <li><a href="#" class="footer__link">Кошельки</a></li>
+                                <li><a href="#" class="footer__link">Coin Specs</a></li>
+                                <li><a href="#" class="footer__link">блоки</a></li>
+                                <li><a href="#" class="footer__link">Statistics</a></li>
+                                <li><a href="#" class="footer__link">Инфопанель</a></li>
+                                <li><a href="#" class="footer__link">Новости</a></li>
+                                <li><a href="#" class="footer__link">Дорожная Карта</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer__item">
+                            <h2 class="footer__pont footer__point">Поддержка</h2>
+                            <ul class="footer__list">
+                                <li><a href="#" class="footer__link">Руководства</a></li>
+                                <li><a href="#" class="footer__link">Форум</a></li>
+                                <li><a href="#" class="footer__link">Почему BTCA</a></li>
+                                <li><a href="#" class="footer__link">Контакты</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <div class="footer__body_center footer__body">
+                    <p class="footer__comment">© 2019-2021 BTCA Community & BTCA Foundation</p>
+                    <p class="footer__comment">Created by BTCA Community</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
